Lists. Bad tags

--- a/Lesson 15.07.2022/index_two.html
+++ b/Lesson 15.07.2022/index_two.html
@@ -9,16 +9,38 @@
 </head>
 <body>
     <div class="container">
-        <section class="toc-wrapper">
-           <h1>Содержание</h1>
-           <ol class="toc">
-              <li><a href="">Что такое презентация</a></li>
-              <li><a href="">Интерактивность в презентации</a></li>
-              <li><a href="">Средства создания презентаций</a></li>
-              <li><a href="">Виды презентаций</a></li>
-              <li><a href="">Способы повышения эффективности восприятия</a></li>
-           </ol>
-        </section>
-     </div>
+      <section class="toc-wrapper">
+        <h1>
+          Content
+        </h1>
+        <ol class="toc">
+          <li>
+            <a href="">
+              What is the presentation
+            </a>
+          </li>
+          <li>
+            <a href="">
+              Interaction in presentation
+            </a>
+          </li>
+          <li>
+            <a href="">
+              How to make presentation
+            </a>
+          </li>
+          <li>
+            <a href="">
+              Types of presentation
+            </a>
+          </li>
+          <li>
+            <a href="">
+              How to make your presentation effective
+            </a>
+          </li>
+        </ol>
+      </section>
+    </div>
 </body>
 </html>
