--- a/Lesson 21.07.2022/index.html
+++ b/Lesson 21.07.2022/index.html
@@ -30,6 +30,10 @@
     <div class="animate-pulse">
         Pulsation
     </div>
+    
+    <div class="animate-pulse2">
+        Pulsation
+    </div>
 
     <div class="animate-fade">
         Fading
