Взаимодействие с HTML. Создание элементов. ToDo List

--- a/JS/06.10.2022/index.html
+++ b/JS/06.10.2022/index.html
@@ -10,24 +10,17 @@
 <body>
     <div id="myDiv" class="container">
         <h1>
-            My ToDo List
+            My toDo list
         </h1>
         <input type="text" id="myInput" placeholder="Enter what you need to do...">
-        <button onclick="newElement();" class="addBtn">Add</button>
+        <button onclick="newElement()" class="addBtn">
+            Add
+        </button>
     </div>
-    <!-- <a href="#myA"></a> -->
     <ul id="myUl">
-        <li>
-            Сходить в магазин
-        </li>
-        <li>
-            Починить дверь
-        </li>
-        <li>
-            Час заниматься фортепиано
-        </li>
-    </ul> 
-    <!-- <a href="myDiv"></a> -->
+        <li>Сходить в магазин</li>
+        <li>Купить одежду</li>
+        <li>Починить раковину</li>
+    </ul>
 </body>
-<script src="script.js"></script>
 </html>
