--- a/JS/06.10.2022/index.html
+++ b/JS/06.10.2022/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <title>ToDo List</title>
 </head>
 <body>
     <div id="myDiv" class="container">
@@ -22,5 +22,6 @@
         <li>Купить одежду</li>
         <li>Починить раковину</li>
     </ul>
+   <script src="script.js"></script>
 </body>
 </html>
