--- a/JS/20.10.2022/index.html
+++ b/JS/20.10.2022/index.html
@@ -10,25 +10,25 @@
 <body>
     <!-- <input type="button" value="Random Color" onclick="randColor();">
     <input type="button" value="Disco Mode" onclick="discoMode();">
-    <input type="button" value="Reset" onclick="reset();">
+    <input type="button" value="Reset" onclick="reset();">-->
 
     <input class="hexInput" type="text" placeholder="Enter HEX code">
-    <button onclick="test()">
+    <button onclick="show()">
         Submit
     </button>
     <input type="button" value="Delete" onclick="deleteDiv()">
     <div class="main"></div>
 
-    <div id="time"></div> -->
+    <div id="time"></div>
 
-    <form id="form" onsubmit="return false">
+    <!-- <form id="form" onsubmit="return false">
         <p>
             Enter something
         </p>
         <input type="text" placeholder="Place to 'KEYDOWN'" id="keyinput">
         <textarea id="area"></textarea>
 
-    </form>
+    </form> -->
 
 </body>
 <script src="script.js"></script>
