--- a/JS/27.10.2022/index.html
+++ b/JS/27.10.2022/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <textarea id="area" placeholder="Your message"></textarea>
+    <button onclick="localStorage.removeItem('area'); area.value = ''">Clear</button>
 </body>
 <script src="script.js"></script>
 </html>
