--- a/JS/08.11.2022/index.html
+++ b/JS/08.11.2022/index.html
@@ -11,9 +11,9 @@
     <h1>
         Make changes
     </h1>
-    <div id="change">
+    <table id="change">
 
-    </div>
+    </table>
     <button onclick="loadDoc()">
         DO IT
     </button>
